@@ -40,21 +40,21 @@ import urllib2
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-11368.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-11435.tgz',
      'xapian-core.tgz',
-     '21ecae4635b4cbb1511aa4e2a7a4f7a58a53675d',
+     'e7d0512dcfced9dabf40a4e777c288462450f005',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-11368.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-11435.tgz',
      'xapian-bindings.tgz',
-     'bdf4b78cfa85a72fd356a260e133572f1f365a5b',
+     '3a7a355f7a60dacc60cd2838cdf8743c363c63c5',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-11368.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-11435.tgz',
      'win32msvc.tgz',
-     'ec5d4b750fd5dd93f2b944bd81815ab552477a95',
+     'a9cf69c3c121d26b4274867b35b50a77b63d982b',
      'xapian-core/win32',
     ),
 )
