@@ -1,3 +1,7 @@
+Fri Sep 26 04:25:48 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: Updated xapian packages.
+
 Thu Sep 25 18:04:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/indexerconnection.py: Expand a FIXME.
